tests/invalid/Final_Invalid_15.whiley
function f(int x) -> (int r):
    //
    final int y
    //
    while x < 10:
        y = x
    //    
    y = 0
    //
    return y